# SlackChat

./: .gitignore  README.md  agent.py  demo.py  pyproject.toml  quickstart.py  run.py  server.py  slack_config_sample.json  testing_client.py  testing_client_local.py
.github/workflows/: update-stars.yml
agentslack/: Slack.py  api.py  client.py  registry.py  types.py  types_.py
examples/: quickstart.py
server/: __init__.py  server.py
server/registry/: registry.py
slack/: Slack.py
src/agentslack/: api.py
