[project]
name = "agentslack"
version = "0.1.0"
description = "A Python SDK for building multi-agent worlds that communicate through Slack."
authors = [
    { name="Veniamin Veselovsky", email="veniamin@princeton.edu" },
    { name="Benedikt Stroebl", email="stroebl@princeton.edu" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "slack-sdk>=3.34.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentslack"]